[gd_scene load_steps=15 format=2]

[ext_resource path="res://assets/Icons/Icon_Heart.png" type="Texture" id=1]
[ext_resource path="res://assets/Icons/Icon_Cart.png" type="Texture" id=2]
[ext_resource path="res://assets/Icons/Icon_Next.png" type="Texture" id=3]
[ext_resource path="res://assets/Icons/Icon_ArrowUp_1.png" type="Texture" id=4]
[ext_resource path="res://HUD.gd" type="Script" id=5]
[ext_resource path="res://assets/m6x11.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://assets/Towers/Tower 04.png" type="Texture" id=7]
[ext_resource path="res://assets/Towers/Tower 03.png" type="Texture" id=8]

[sub_resource type="DynamicFont" id=10]
size = 43
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=4]
size = 37
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=7]
size = 39
font_data = ExtResource( 6 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 0.298927, 10.889, 64.8889, 117.333 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( -0.528904, 6.78614, 65.0302, 120.678 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = SubResource( 8 )
region = Rect2( -0.85244, 10.345, 66.4193, 111.129 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 5 )

[node name="Play" type="Button" parent="."]
margin_left = 813.0
margin_top = 16.0
margin_right = 1005.0
margin_bottom = 206.0
rect_scale = Vector2( 0.4, 0.4 )
icon = ExtResource( 3 )
flat = true
icon_align = 1

[node name="Speed" type="Button" parent="."]
margin_left = 908.0
margin_top = 14.0
margin_right = 1148.0
margin_bottom = 219.0
rect_scale = Vector2( 0.4, 0.4 )
icon = ExtResource( 4 )
flat = true

[node name="Health" type="Label" parent="."]
margin_left = 232.0
margin_top = 16.0
margin_right = 304.0
margin_bottom = 58.0
custom_colors/font_color = Color( 0.929412, 0.0509804, 0.00784314, 1 )
custom_fonts/font = SubResource( 10 )
text = "100"

[node name="Heart" type="Sprite" parent="."]
position = Vector2( 200, 32 )
scale = Vector2( 0.213964, 0.173077 )
texture = ExtResource( 1 )

[node name="WaveCounter" type="Label" parent="."]
margin_left = 488.0
margin_top = 8.0
margin_right = 688.0
margin_bottom = 41.0
custom_fonts/font = SubResource( 4 )
text = "Wave 1"

[node name="ShoppingCart" type="Sprite" parent="."]
position = Vector2( 200, 80 )
scale = Vector2( 0.186957, 0.193989 )
texture = ExtResource( 2 )

[node name="Money" type="Label" parent="."]
anchor_left = 0.219
anchor_top = 0.12
anchor_right = 0.281
anchor_bottom = 0.157
margin_left = 7.74399
margin_top = -8.0
margin_right = 24.256
margin_bottom = 1.8
custom_fonts/font = SubResource( 7 )
text = "$1000"

[node name="build_buttons" type="Node" parent="."]

[node name="Wizard" type="Button" parent="build_buttons" groups=["build_buttons"]]
margin_left = 40.0
margin_top = 176.0
margin_right = 116.0
margin_bottom = 299.0
icon = SubResource( 6 )
flat = true

[node name="Lobber" type="Button" parent="build_buttons" groups=["build_buttons"]]
margin_left = 40.0
margin_top = 48.0
margin_right = 120.0
margin_bottom = 165.0
icon = SubResource( 9 )
flat = true

[connection signal="pressed" from="Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="Speed" to="." method="_on_Speed_pressed"]
